--- a/python/10_pandas/python_for_datascience_handbook/12. Working with Time Series.ipynb
+++ b/python/10_pandas/python_for_datascience_handbook/12. Working with Time Series.ipynb
@@ -5,15 +5,15 @@
    "metadata": {},
    "source": [
     "### Dates and Times in Python\n",
-    "The Python world has a number of available representations of dates, times, deltas,\n",
+    "• The Python world has a number of available representations of dates, times, deltas,\n",
     "and timespans.\n",
     "\n",
-    "While the time series tools provided by Pandas tend to be the most useful for data science applications, it is helpful to see their relationship to other packages used in Python."
+    "• While the time series tools provided by Pandas tend to be the most useful for data science applications, it is helpful to see their relationship to other packages used in Python."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,16 @@
    "metadata": {},
    "source": [
     "### Native Python dates and times: datetime and dateutil\n",
-    "Python’s basic objects for working with dates and times reside in the built-in date time module.\n",
+    "• Python’s basic objects for working with dates and times reside in the built-in date time module.\n",
     "\n",
-    "Along with the third-party dateutil module, you can use it to quickly perform a host of useful functionalities on dates and times.\n",
+    "• Along with the third-party dateutil module, you can use it to quickly perform a host of useful functionalities on dates and times.\n",
     "\n",
-    "For example, you can manually build a date using the datetime type:"
+    "• For example, you can manually build a date using the datetime type:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "datetime.datetime(2018, 5, 17, 0, 0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "datetime.datetime(1994, 5, 4, 0, 0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,12 +80,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once you have a datetime object, you can do things like printing the day of the week:"
+    "• Once you have a datetime object, you can do things like printing the day of the week:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "'Wednesday'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,16 +109,16 @@
    "source": [
     "### Typed arrays of times: NumPy’s datetime64 \n",
     "\n",
-    "The weaknesses of Python’s datetime format inspired the NumPy team to add a set of native time series data type to NumPy.\n",
+    "• The weaknesses of Python’s datetime format inspired the NumPy team to add a set of native time series data type to NumPy.\n",
     "\n",
-    "The datetime64 dtype encodes dates as 64-bit integers, and thus allows arrays of dates to be represented very compactly.\n",
+    "• The datetime64 dtype encodes dates as 64-bit integers, and thus allows arrays of dates to be represented very compactly.\n",
     "\n",
-    "The datetime64 requires a very specific input format:"
+    "• The datetime64 requires a very specific input format:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "array('2017-04-04', dtype='datetime64[D]')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,12 +141,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have this date formatted, however, we can quickly do vectorized operations on it:"
+    "• Once we have this date formatted, however, we can quickly do vectorized operations on it:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -157,13 +157,246 @@
        "       '2017-04-12', '2017-04-13'], dtype='datetime64[D]')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "date + np.arange(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.datetime64('2020-01-19')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# day-based datetime:\n",
+    "np.datetime64('2020-01-19')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.datetime64('2021-01-20T19:22')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# minute-based datetime:\n",
+    "np.datetime64('2021-01-20 19:22')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dates and times in Pandas: Best of both worlds\n",
+    "• Pandas builds upon all the tools just discussed to provide a Timestamp object, which combines the ease of use of datetime and dateutil with the efficient storage and vectorized interface of numpy.datetime64.\n",
+    "\n",
+    "• From a group of these Timestamp objects, Pandas can construct a DatetimeIndex that can be used to index data in a Series or DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2019-07-07 00:00:00')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date = pd.to_datetime(\"7th of July, 2019\")\n",
+    "date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sunday'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date.strftime('%A')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• Additionally, we can do NumPy-style vectorized operations directly on this same object:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2019-07-07 00:00:00', '2019-08-06 10:29:06',\n",
+       "               '2019-09-05 20:58:12', '2019-10-06 07:27:18',\n",
+       "               '2019-11-05 17:56:24', '2019-12-06 04:25:30',\n",
+       "               '2020-01-05 14:54:36', '2020-02-05 01:23:42',\n",
+       "               '2020-03-06 11:52:48', '2020-04-05 22:21:54',\n",
+       "               '2020-05-06 08:51:00', '2020-06-05 19:20:06'],\n",
+       "              dtype='datetime64[ns]', freq=None)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date + pd.to_timedelta(np.arange(12), 'M')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pandas Time Series: Indexing by Time\n",
+    "\n",
+    "Where the Pandas time series tools really become useful is when you begin to index data by timestamps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2014-07-04    0\n",
+       "2014-08-04    1\n",
+       "2015-07-04    2\n",
+       "2015-08-04    3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index = pd.DatetimeIndex(['2014-07-04', '2014-08-04', '2015-07-04', '2015-08-04'])\n",
+    "data = pd.Series([0, 1, 2, 3], index = index)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• Now that we have this data in a Series , we can make use of any of the Series indexing patterns we discussed in previous sections, passing values that can be coerced into dates:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2014-07-04    0\n",
+       "2014-08-04    1\n",
+       "2015-07-04    2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['2014-07-04':'2015-07-04']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• There are additional special date-only indexing operations, such as passing a year to obtain a slice of all data from that year:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015-07-04    2\n",
+       "2015-08-04    3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['2015']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pandas Time Series Data Structures\n",
+    "\n",
+    "• For time stamps, Pandas provides the Timestamp type. As mentioned before, it is essentially a replacement for Python’s native datetime , but is based on the more efficient numpy.datetime64 data type. The associated index structure is DatetimeIndex.\n",
+    "\n",
+    "• For time periods, Pandas provides the Period type. This encodes a fixed-frequency interval based on numpy.datetime64 . The associated index structure is PeriodIndex .\n",
+    "\n",
+    "• For time deltas or durations, Pandas provides the Timedelta type. Timedelta is a more efficient replacement for Python’s native datetime.timedelta type, and is based on numpy.timedelta64. The associated index structure is TimedeltaIndex."
    ]
   },
   {
@@ -190,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
